# pytmpl

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  hello.py  hello2.py  lefthook.yml  pyproject.toml  wrapper.sh
.devcontainer/: Dockerfile  devcontainer.json
